# log-with-context

./: .gitignore  .isort.cfg  .makefile-help  .pylintrc  LICENSE  Makefile  README.rst  log_with_context.py  pyproject.toml  test_log_with_context.py
.github/workflows/: release.yml  test.yml
log_with_context/: __init__.py
