[tool.poetry]
name = "log-with-context"
version = "0.0.0"
description = "a thread-local, context-preserving Python logger"
authors = ["Neocrym Records Inc. <engineering@neocrym.com>"]
readme = "README.rst"
repository = "https://github.com/neocrym/log-with-context"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.8.0"
mypy = "^0.812"
black = "^20.8b1"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
