[tool.poetry]
name = "log-with-context"
version = "0.0.0"
description = "a thread-local, context-preserving Python logger"
authors = ["Neocrym Records Inc. <engineering@neocrym.com>"]
readme = "README.rst"
repository = "https://github.com/neocrym/log-with-context"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pylint = "^3.0"
mypy = "^1.6.1"
black = "^23.10.1"
isort = "^5.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
